<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginActivity">

  <ImageView
    android:id="@+id/app_logo"
    android:layout_width="200dp"
    android:layout_height="130dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:contentDescription="@string/login_logo_description"
    android:paddingStart="25dp"
    android:paddingEnd="0dp"
    android:src="@drawable/main_logo" />

  <EditText
    android:id="@+id/edt_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/app_logo"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:autofillHints="emailAddress"
    android:background="@drawable/edt_background"
    android:hint="@string/login_email_hint"
    android:inputType="textEmailAddress"
    android:minHeight="48dp"
    android:paddingHorizontal="10dp"
    android:textColorHint="@color/gray" />

  <EditText
    android:id="@+id/edt_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/edt_email"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:autofillHints="password"
    android:background="@drawable/edt_background"
    android:hint="@string/login_password_hint"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:paddingHorizontal="10dp"
    android:textColorHint="@color/gray" />

  <Button
    android:id="@+id/btn_login"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@id/edt_password"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:background="@drawable/btn_main_background"
    android:text="@string/login_button_text"
    android:textColor="#000000"
    android:textSize="18sp" />

  <Button
    android:id="@+id/btn_sign_up"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@id/btn_login"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:background="@drawable/btn_secondary_background"
    android:text="@string/sign_up_button_text"
    android:textColor="@color/gray"
    android:textSize="18sp" />

</RelativeLayout>